--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,21 @@ services:
       - PORT=3130
       - EMAIL_USER=chagantyteja2502@gmail.com
       - EMAIL_PASS=yxoq bjuk rdnt alzp
+    grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - '3000:3000'
+    environment:
+      - GF_SMTP_ENABLED=true
+      - GF_SMTP_HOST=smtp.gmail.com:587
+      - GF_SMTP_USER=biksbunny154@gmail.com
+      - GF_SMTP_PASSWORD=jror wkgk hrzv mupd
+      - GF_SMTP_SKIP_VERIFY=true
+      - GF_SMTP_FROM_ADDRESS=biksbunny154@gmail.com
+      - GF_SMTP_FROM_NAME=Grafana Alerts
+    networks:
+      - monitoring-net    
   mongodb:
     image: mongo:latest 
     ports:
