--- a/k8s-manifests/usernode-js-service.yml
+++ b/k8s-manifests/usernode-js-service.yml
@@ -8,6 +8,7 @@ spec:
   ports:
     - port: 3130
       targetPort: 3130
+      nodePort: 30500
       protocol: TCP
   selector:
     app: userprofile
